# buyu-meituan

./: .env.example  .gitignore  .vercelignore  README.md  pyproject.toml  requirements.txt
app/: __init__.py  config.py  event_bus.py  llm.py  place_images.py  prompts.py  server.py  session.py
app/mock/: meituan.py
app/mock/data/: merchants.json  representative_merchants.json
app/static/: app.css  app.js
app/templates/: index.html
tests/: test_branding.py  test_config.py  test_deployed_e2e.py  test_llm_client.py  test_llm_schema_adapters.py  test_merchant_copy.py  test_mock_catalog_completeness.py  test_mock_images.py  test_place_images.py  test_preset_start.py  test_responsive_css.py  test_restaurant_booking_card.py  test_ui_copy.py
