[project]
name = "buyu-meituan"
version = "1.0.0"
description = "本地引力 · 美团 AI Hackathon 2026 赛题06完整实现代码：本地生活规划与执行 Agent"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
